MDEV-39560: Assertion `found_tables > 0' failed

Ignore JOIN_ORDER hints that force FULL JOINs to the inner
side of other JOINs.

A FULL JOIN must be placed before any table outside of the FULL JOIN
in the join order; FULL JOINs are not allowed on the inner side of an
enclosing LEFT or RIGHT JOIN.  Prevent the user from supplying a
JOIN_ORDER() hint that otherwise forces this invalid order, and emit a
warning.  When we implement phase 3 of FULL JOIN support, this
restriction will be relaxed.